天气执行模块的完整添加;设备房列表的模型和接口返回值调试;

--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
@@ -316,8 +316,8 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfe-z9-7kp">
-                                                <rect key="frame" x="368" y="10" width="41" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <rect key="frame" x="354" y="8.6666666666666661" width="50" height="27"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <state key="normal" title="天气情况"/>
                                                 <connections>
                                                     <action selector="weatherButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lIw-Ys-kbq"/>
@@ -327,7 +327,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="VWM-dt-8AB" secondAttribute="bottom" id="3Xb-k9-adB"/>
-                                            <constraint firstAttribute="trailing" secondItem="mfe-z9-7kp" secondAttribute="trailing" constant="5" id="429-Js-4qO"/>
+                                            <constraint firstAttribute="trailing" secondItem="mfe-z9-7kp" secondAttribute="trailing" constant="10" id="429-Js-4qO"/>
                                             <constraint firstItem="mfe-z9-7kp" firstAttribute="centerY" secondItem="eyu-dr-Wog" secondAttribute="centerY" id="BEA-7s-yRj"/>
                                             <constraint firstItem="VWM-dt-8AB" firstAttribute="top" secondItem="eyu-dr-Wog" secondAttribute="top" constant="10" id="X05-BN-wMT"/>
                                             <constraint firstAttribute="height" constant="44" id="Y2S-cC-VAT"/>
@@ -427,7 +427,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2835" y="-108"/>
+            <point key="canvasLocation" x="3028" y="-121"/>
         </scene>
         <!--WorkOrder-->
         <scene sceneID="cT2-oD-UIH">
