--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/YQHomeWeather.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/YQHomeWeather.storyboard
@@ -26,13 +26,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日期" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aSH-KJ-qmd">
-                                            <rect key="frame" x="82" y="25" width="31" height="18"/>
+                                            <rect key="frame" x="72" y="25" width="31" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="星期" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VPG-wC-hES">
-                                            <rect key="frame" x="172" y="25" width="31" height="18"/>
+                                            <rect key="frame" x="142" y="25" width="31" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -43,12 +43,20 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="天气" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osb-8i-nHt">
+                                            <rect key="frame" x="202" y="25" width="31" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="aSH-KJ-qmd" firstAttribute="centerX" secondItem="I3Y-mb-yim" secondAttribute="centerX" constant="-90" id="Pw7-0l-OgZ"/>
+                                        <constraint firstItem="osb-8i-nHt" firstAttribute="centerX" secondItem="I3Y-mb-yim" secondAttribute="centerX" constant="30" id="AJN-ZS-cNh"/>
+                                        <constraint firstItem="aSH-KJ-qmd" firstAttribute="centerX" secondItem="I3Y-mb-yim" secondAttribute="centerX" constant="-100" id="Pw7-0l-OgZ"/>
+                                        <constraint firstItem="osb-8i-nHt" firstAttribute="centerY" secondItem="I3Y-mb-yim" secondAttribute="centerY" id="eTa-eU-ZjV"/>
                                         <constraint firstItem="Ltb-b3-0u9" firstAttribute="centerX" secondItem="I3Y-mb-yim" secondAttribute="centerX" constant="100" id="fb2-66-zVI"/>
                                         <constraint firstItem="VPG-wC-hES" firstAttribute="centerY" secondItem="I3Y-mb-yim" secondAttribute="centerY" id="pCE-qE-0dL"/>
-                                        <constraint firstItem="VPG-wC-hES" firstAttribute="centerX" secondItem="I3Y-mb-yim" secondAttribute="centerX" id="tWZ-PG-Olf"/>
+                                        <constraint firstItem="VPG-wC-hES" firstAttribute="centerX" secondItem="I3Y-mb-yim" secondAttribute="centerX" constant="-30" id="tWZ-PG-Olf"/>
                                         <constraint firstItem="aSH-KJ-qmd" firstAttribute="centerY" secondItem="I3Y-mb-yim" secondAttribute="centerY" id="tch-i1-CNj"/>
                                         <constraint firstItem="Ltb-b3-0u9" firstAttribute="centerY" secondItem="I3Y-mb-yim" secondAttribute="centerY" id="u7F-cd-Pz3"/>
                                     </constraints>
@@ -56,6 +64,7 @@
                                 <connections>
                                     <outlet property="dateLabel" destination="aSH-KJ-qmd" id="QG7-8t-09l"/>
                                     <outlet property="temperatureLabel" destination="Ltb-b3-0u9" id="fu0-yv-2ig"/>
+                                    <outlet property="weatherLabel" destination="osb-8i-nHt" id="tpc-Lg-lyn"/>
                                     <outlet property="weekLabel" destination="VPG-wC-hES" id="AI7-mm-VcT"/>
                                 </connections>
                             </tableViewCell>
