bate,ems双项目的推送设置调试

--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/SignIn.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/SignIn.storyboard
@@ -382,6 +382,6 @@
         <image name="签到范围" width="129" height="42"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Uao-uk-oNl"/>
+        <segue reference="XUb-Ru-3Ob"/>
     </inferredMetricsTieBreakers>
 </document>
