--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQFeedBackVC.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQFeedBackVC.storyboard
@@ -41,6 +41,9 @@
                                                 <color key="value" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="cancelButtonClick:" destination="Hgd-lC-Zle" eventType="touchUpInside" id="Cij-dK-ig6"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hgi-qx-Gey">
                                         <rect key="frame" x="197.5" y="5" width="157.5" height="50"/>
@@ -52,6 +55,9 @@
                                                 <real key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="makeSureButtonClick:" destination="Hgd-lC-Zle" eventType="touchUpInside" id="l7g-5M-wLI"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -118,7 +124,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOj-kh-PC3">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOj-kh-PC3" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
                                                 <rect key="frame" x="10" y="334" width="355" height="150"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
@@ -164,6 +170,11 @@
                             <constraint firstItem="3OX-Mt-bRQ" firstAttribute="top" secondItem="yVm-z9-tkQ" secondAttribute="bottom" id="wI1-gY-v0U"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addImageView" destination="eOj-kh-PC3" id="Ni1-Lr-emi"/>
+                        <outlet property="contentTextView" destination="oep-ed-OqZ" id="bhU-zn-eJW"/>
+                        <outlet property="titleTextField" destination="28s-Gp-k74" id="Mju-ue-S0u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0pc-nM-EfK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
